[package]
name = "carbites"
description = "CAR file splitted implementation in Rust"
version = "0.1.2"
edition = "2021"
authors = ["Taras Shchybovyk <tshchybo@gmail.com>"]
keywords = ["ipfs", "carbites", "CAR"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tarassh/carbites"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipld = { version = "0.16", package = "libipld"}
ipld-cbor = {version = "0.16", package = "libipld-cbor"}
integer-encoding = "3.0"
thiserror = "1.0"

